# fastapi_Auth

./: .gitignore  main.py  pyproject.toml  requirment.txt
app/: app.py  schemas.py
